distribuzione controller aggiornato